fix(css): add bottom safe spacing to utility apps

--- a/web/src/components/Phone/PhoneFrame.module.scss
+++ b/web/src/components/Phone/PhoneFrame.module.scss
@@ -10,19 +10,8 @@
   transform-origin: bottom right;
 }
 
-.phone-coque {
-  position: absolute;
-  z-index: 2;
-  width: 394px;
-  height: 800px;
-  top: 71px;
-  left: 15px;
-  pointer-events: none;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
 .phone-screen {
+  --phone-bottom-ui-gap: calc(24px + var(--safe-b));
   overflow: hidden;
   position: absolute;
   background-color: white;
