--- a/web/src/components/apps/messages/MessagesApp.module.scss
+++ b/web/src/components/apps/messages/MessagesApp.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   background: #f5f5f7;
-  padding: 0 16px;
+  padding: 0 16px calc(16px + var(--phone-bottom-ui-gap, 0px));
 }
 
 .header {
@@ -102,7 +102,7 @@
 .fab {
   position: absolute;
   right: 14px;
-  bottom: 18px;
+  bottom: calc(18px + var(--phone-bottom-ui-gap, 0px));
   width: 52px;
   height: 52px;
   border: none;
